numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@dimension_name_conflict.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/dimension_name_conflict.nbt
---
error: identifier clash in definition
  ┌─ <internal:3>:2:11
  │
1 │ dimension A
  │           - Previously defined dimension here
2 │ dimension A = A^2
  │           ^ identifier is already in use
